Package experimental Vector scanner in multi-release JAR